<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" android:layout_margin="@dimen/px_10_dp"
    android:descendantFocusability="afterDescendants"
    tools:context="com.mahageetamusic.classes.ForgotPassword">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/px_100_dp"
        android:layout_alignParentTop="true"
        android:layout_gravity="center"
        android:src="@drawable/ic_logo_colored" />

    <TextView
        android:id="@+id/forgotpwd_title"
        style="@style/IntroTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/px_10_dp"
        android:gravity="center"
        android:text="@string/title_activity_forgot_password" />

    <TextView
        android:id="@+id/forgotpwd_text"
        style="@style/IntroTextView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/forgotpwd_title"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/px_10_dp"
        android:gravity="start"
        android:text="@string/forgot_stmt_string"
        android:textSize="14sp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/request_pwd_floatingtextfield"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/forgotpwd_text"
        android:layout_marginTop="@dimen/px_10_dp"
        android:background="@drawable/color_border"
        app:hintTextAppearance="@style/TextInputLayoutTheme">

        <EditText
            android:id="@+id/request_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/screen_background_light_transparent"
            android:drawableBottom="@drawable/ic_divider"
            android:drawablePadding="5dp"
            android:hint="@string/login_username"
            android:textColorHint="@color/primary" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/send_request"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/request_pwd_floatingtextfield"
        android:layout_marginTop="@dimen/px_15_dp"
        android:onClick="PwdRequest"
        android:text="@string/forgot_send_btn_string" />

    <TextView
        android:id="@+id/textView2"
        style="@style/IntroTextView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/send_request"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="@dimen/px_5_dp"
        android:gravity="center"
        android:text="@string/forgot_already_string"
        android:textSize="14sp" />

</RelativeLayout>
