<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:descendantFocusability="beforeDescendants"
    android:overScrollMode="never"
    android:padding="20dp"
    android:scrollbars="none"
    tools:context="com.mahageetamusic.classes.SignUp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/signup_title"
            android:src="@drawable/ic_logo_colored" />

        <TextView
            style="@style/IntroTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/title_activity_sign_up" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@drawable/color_border"
            android:orientation="vertical"
            android:padding="10dp">


            <android.support.design.widget.TextInputLayout
                android:id="@+id/firstnametil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/TextInputLayoutTheme">

                <EditText
                    android:id="@+id/firstname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/screen_background_light_transparent"
                    android:drawableBottom="@drawable/ic_divider"
                    android:drawablePadding="5dp"
                    android:hint="@string/firstname"
                    android:padding="5dp"
                    android:textSize="16sp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/lastnametil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/TextInputLayoutTheme">

                <EditText
                    android:id="@+id/lastname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/screen_background_light_transparent"
                    android:drawableBottom="@drawable/ic_divider"
                    android:drawablePadding="5dp"
                    android:hint="@string/lastname"
                    android:padding="5dp"
                    android:textSize="16sp" />

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@drawable/color_border"
            android:orientation="vertical"
            android:padding="10dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/emailidtil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/TextInputLayoutTheme">

                <EditText
                    android:id="@+id/emailid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/screen_background_light_transparent"
                    android:drawableBottom="@drawable/ic_divider"
                    android:drawablePadding="5dp"
                    android:hint="@string/emailid"
                    android:padding="5dp"
                    android:textSize="16sp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/passwordtil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/TextInputLayoutTheme">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/screen_background_light_transparent"
                    android:drawableBottom="@drawable/ic_divider"
                    android:drawablePadding="5dp"
                    android:hint="@string/password"
                    android:padding="5dp"
                    android:textSize="16sp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/confirmpasswordtil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/TextInputLayoutTheme">

                <EditText
                    android:id="@+id/confirmpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/screen_background_light_transparent"
                    android:drawableBottom="@drawable/ic_divider"
                    android:drawablePadding="5dp"
                    android:hint="@string/confirmpwd"
                    android:padding="5dp"
                    android:textSize="16sp" />

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@drawable/color_border"
            android:orientation="vertical"
            android:padding="10dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/addresstil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/TextInputLayoutTheme">

                <EditText
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/screen_background_light_transparent"
                    android:drawableBottom="@drawable/ic_divider"
                    android:drawablePadding="5dp"
                    android:hint="@string/address"
                    android:padding="5dp"
                    android:textSize="16sp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/citytil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/TextInputLayoutTheme">

                <EditText
                    android:id="@+id/city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/screen_background_light_transparent"
                    android:drawableBottom="@drawable/ic_divider"
                    android:drawablePadding="5dp"
                    android:hint="@string/city"
                    android:padding="5dp"
                    android:textSize="16sp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/statetil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/TextInputLayoutTheme">

                <EditText
                    android:id="@+id/state"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/screen_background_light_transparent"
                    android:drawableBottom="@drawable/ic_divider"
                    android:drawablePadding="5dp"
                    android:hint="@string/state"
                    android:padding="5dp"
                    android:textSize="16sp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/countrytil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/TextInputLayoutTheme">

                <EditText
                    android:id="@+id/country"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/screen_background_light_transparent"
                    android:drawableBottom="@drawable/ic_divider"
                    android:drawablePadding="5dp"
                    android:hint="@string/country"
                    android:padding="5dp"
                    android:textSize="16sp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/pincodetil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/TextInputLayoutTheme">

                <EditText
                    android:id="@+id/pincode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/screen_background_light_transparent"
                    android:drawableBottom="@drawable/ic_divider"
                    android:drawablePadding="5dp"
                    android:hint="@string/pincode"
                    android:padding="5dp"
                    android:textSize="16sp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/phonetil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/TextInputLayoutTheme">

                <EditText
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/screen_background_light_transparent"
                    android:drawableBottom="@drawable/ic_divider"
                    android:drawablePadding="5dp"
                    android:hint="@string/phone"
                    android:padding="5dp"
                    android:textSize="16sp" />

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <Button
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/title_activity_sign_up"
            android:onClick="signUpClick"
            android:textAllCaps="false" />

        <TextView
            style="@style/IntroTextView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/forgot_already_string" />
    </LinearLayout>
</ScrollView>
