<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:descendantFocusability="beforeDescendants"
    android:overScrollMode="never"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/request_service_fname_floatingtextfield"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:hintTextAppearance="@style/TextInputLayoutTheme">

            <EditText
                android:id="@+id/request_service_fname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/screen_background_light_transparent"
                android:drawableBottom="@drawable/ic_divider"
                android:drawablePadding="5dp"
                android:hint="@string/service_request_fullname"
                android:textColorHint="@android:color/black" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/request_service_subject_floatingtextfield"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:hintTextAppearance="@style/TextInputLayoutTheme">

            <EditText
                android:id="@+id/request_service_subject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/screen_background_light_transparent"
                android:drawableBottom="@drawable/ic_divider"
                android:drawablePadding="5dp"
                android:hint="@string/service_request_subject"
                android:textColorHint="@android:color/black" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/request_service_contact_floatingtextfield"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:hintTextAppearance="@style/TextInputLayoutTheme">

            <EditText
                android:id="@+id/request_service_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/screen_background_light_transparent"
                android:drawableBottom="@drawable/ic_divider"
                android:drawablePadding="5dp"
                android:hint="@string/service_request_contact_number"
                android:inputType="phone"
                android:textColorHint="@android:color/black" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/request_service_email_floatingtextfield"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:hintTextAppearance="@style/TextInputLayoutTheme">

            <EditText
                android:id="@+id/request_service_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/screen_background_light_transparent"
                android:drawableBottom="@drawable/ic_divider"
                android:drawablePadding="5dp"
                android:hint="@string/service_request_email_id"
                android:inputType="textEmailAddress"
                android:textColorHint="@android:color/black" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/request_service_message_floatingtextfield"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:hintTextAppearance="@style/TextInputLayoutTheme">

            <EditText
                android:id="@+id/request_service_message"
                android:layout_width="match_parent"
                android:layout_height="@dimen/px_200_dp"
                android:background="@drawable/color_border"
                android:gravity="top"
                android:hint="@string/service_request_msg_comment_note"
                android:inputType="textMultiLine"
                android:textColorHint="@android:color/black" />
        </android.support.design.widget.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/service_request_submit"
                style="@style/ButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="0.5"
                android:text="@string/service_request_submit"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/service_request_reset"
                style="@style/ButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="0.5"
                android:background="@android:color/darker_gray"
                android:text="@string/service_request_reset"
                android:textAllCaps="false" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>