<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.mahageetamusic.fragments.AboutUs">

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="@dimen/px_400_dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="@dimen/px_400_dp"
                android:scaleType="center"
                android:src="@drawable/bg" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/title"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/app_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Hello"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@android:color/white" />

                <ImageView
                    android:layout_width="@dimen/px_200_dp"
                    android:layout_height="@dimen/px_200_dp"
                    android:src="@drawable/ic_logo_white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/copyright"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@android:color/white" />
            </LinearLayout>
        </FrameLayout>

        <TextView
            android:id="@+id/contentpanel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/px_24_dp"
            android:text="@string/app_name"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
            android:textSize="@dimen/px_32_dp" />
    </LinearLayout>
</ScrollView>
